# ReAct_agent

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  OPTIMIZATION_SUMMARY.md  PROJECT_REFACTOR_PLAN.md  README.md  docker-compose.yml  example.txt,  llm_interface.py  main.py  pyproject.toml  requirements.txt  test_optimization.py  优化完成总结.md
.github/workflows/: test.yml
agents/: __init__.py  base.py  content_agent.py  layout_agent.py  orchestrator.py  plan_execute_reflect_agent.py  react_agent.py
agents/crews/: __init__.py  base.py
agents/crews/resume/: __init__.py  content_agent.py  crew.py  layout_agent.py  orchestrator.py
apps/web/: app.js  index.html  styles.css
common/: __init__.py  config.py  exceptions.py  logger.py
configs/: example.yaml
configs/examples/: example.yaml  v2.example.yaml
core/: __init__.py  agent.py  cli.py  knowledge.py  message.py  orchestrator.py  parser.py  prompt.py  task.py  tool_registry.py
core/tools/: __init__.py  base.py  builtin.py
docs/architecture/: v2_architecture_design.md
docs/plans/: business_gap_checklist.md  student_employment_execution_plan.md
embeddings/: __init__.py  embedding.py
evaluation/: __init__.py
knowledge/: __init__.py  vector_kb.py
llm/: __init__.py  base.py  modelscope.py  vllm.py
memory/: __init__.py  base.py  long_term.py  manager.py  short_term.py
prompts/: __init__.py  agent.py  cbct_metal_artifact_removal.md  content.py  layout.py  resume.py
resume_copilot/: __init__.py
resume_copilot/application/: __init__.py  ai_optimizer.py  job_search_agent_service.py  reporting.py  resume_product_service.py  resume_workbench_service.py  student_intake_service.py
resume_copilot/domain/: __init__.py  models.py  product_reports.py  resume_schema.py
resume_copilot/interfaces/: __init__.py  cli.py  http_server.py
resume_copilot/product/: __init__.py  curation.py
resume_copilot/quality/: __init__.py  benchmark.py  metrics.py
scripts/: demo_multi_agent.py  run_resume_agent.py  run_tests.sh
scripts/checks/: manual_config_check.py  manual_memory_config_check.py  manual_runtime_check.py
scripts/dev/: run_resume_eval.py  serve_frontend.py  start_local.py  test_resume.py
storage/: __init__.py  milvus.py
storage/benchmarks/: resume_eval_set.json
tests/: __init__.py  conftest.py  manual_runtime_check.py  test_agent.py  test_agents.py  test_cli_workbench.py  test_config.py  test_core.py  test_crews.py  test_embeddings.py  test_generators.py  test_job_search_agent_service.py  test_knowledge.py  test_llm.py  test_memory.py  test_memory_maintenance.py  test_per_agent.py  test_product_frontend.py  test_product_reports.py  test_resume_curation.py  test_resume_eval.py  test_resume_pipeline.py  test_startup_modes.py  test_tools.py
tests/scripts/: test_resume.py
tools/: __init__.py  base.py  registry.py
tools/agent_wrappers/: __init__.py  content_optimizer.py  layout_designer.py  style_selector.py
tools/agents/: __init__.py  content_optimizer.py  layout_designer.py
tools/builtin/: __init__.py  calculator.py  file_ops.py  search.py  web_search.py
tools/generators/: __init__.py  enhancer.py  pagination.py  resume.py  resume_optimizer.py
tools/templates/: README.md  __init__.py  base.py  registry.py
tools/templates/custom/: __init__.py  example.py
tools/templates/presets/: creative.json  fresh_graduate.json  management.json  minimal.json  tech_classic.json  tech_modern.json
tools/vision/: yolo_detector.py
workflows/: __init__.py  base.py  resume_pipeline.py
